force-app/main/default/objects/Return_Request__c/Return_Request__c.object-meta.xml
<CustomObject>
    <description>Return and refund workflow record.</description>
    <label>Return Request</label>
    <nameField>
        <displayFormat>RET-{000000}</displayFormat>
        <label>Return Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>