force-app/main/default/objects/Return_Request__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Commerce_Order__c</referenceTo>
    <relationshipLabel>Return Requests</relationshipLabel>
    <relationshipName>ReturnRequests</relationshipName>
    <type>Lookup</type>
</CustomField>