force-app/main/default/objects/Return_Request__c/validationRules/Refund_Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Amount_Not_Negative</fullName>
    <active>true</active>
    <description>Prevents negative refund amounts.</description>
    <errorConditionFormula>Refund_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Refund_Amount__c</errorDisplayField>
    <errorMessage>Refund amount cannot be negative.</errorMessage>
</ValidationRule>